# elysia

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  resources.txt  rundocs.sh  runpy.sh  setup.py  tree.txt  wrangler.toml
.github/workflows/: ci.yml  deploy.yml  docs.yml  pypi-release.yml  run_pytest.yml
API/: index.html
API/payload_formats/: index.html
API/user_and_tree_managers/: index.html
Advanced/: index.html
Advanced/advanced_tool_construction/: index.html
Advanced/custom_objects/: index.html
Advanced/environment/: index.html
Advanced/technical_overview/: index.html
Examples/: index.html
Examples/data_analysis/: index.html
Examples/email/: index.html
Examples/fantasy_adventure/: index.html
Examples/query_weaviate/: index.html
Examples/sentiment_analysis/: index.html
Reference/Client/: index.html
Reference/Managers/: index.html
Reference/Objects/: index.html
Reference/PayloadTypes/: index.html
Reference/Preprocessor/: index.html
Reference/Settings/: index.html
Reference/Tree/: index.html
Reference/Util/: index.html
advanced_usage/: index.html
basic/: index.html
creating_tools/: index.html
docs/: 02_advanced_usage.md  05_creating_your_own_tools.md  Reference.md  advanced_usage.md  basic.md  creating_tools.md  creating_your_own_tools.md  index.md  preprocess.md  setting_up.md
docs/02_Examples/: 01_basic.md  03_sentiment_analysis.md  04_fantasy_adventure.md
docs/API/: index.md  payload_formats.md  user_and_tree_managers.md
docs/Advanced/: advanced_tool_construction.md  creating_your_own_tools.md  custom_objects.md  environment.md  index.md
docs/Customising/: creating_your_own_tools.md  custom_objects.md  environment.md  technical_overview.md
docs/Examples/: basic.md  data_analysis.md  email.md  fantasy_adventure.md  index.md  query_weaviate.md  sentiment_analysis.md
docs/Reference/: Client.md  Managers.md  Objects.md  PayloadTypes.md  Preprocessor.md  Result.md  Settings.md  Tree.md  Util.md
elysia/: __init__.py  __metadata__.py  config.py  objects.py  pyproject.toml
elysia/api/: api_types.py  app.py  cli.py  custom_tools.py
elysia/dspy/: assertions.py
elysia/dspy_additions/: environment_of_thought.py
elysia/preprocess/: __init__.py  collection.py  prompt_executors.py  prompt_templates.py
elysia/preprocessing/: __init__.py  collection.py
elysia/tests/: conftest.py  dummy_adapter.py  run_all_tests.sh  test_client.py  test_config.py  test_objects.py  test_settings.py  test_tools.py  test_tree_config.py
elysia/tools/: __init__.py  objects.py
elysia/tree/: objects.py  prompt_executors.py  prompt_templates.py  tree.py  util.py
elysia/util/: __init__.py  async_util.py  client.py  collection.py  collection_metadata.py  dummy_adapter.py  elysia_chain_of_thought.py  lm.py  logging.py  objects.py  parsing.py  reference.py  retrieve_feedback.py  return_types.py  run_in_async.py
search/: search_index.json
setting_up/: index.html
src/elysia/: __init__.py  config.py  objects.py
tests/: conftest.py  tree.txt
tests/api/: conftest.py  test_api_keys.py  test_change_tools.py  test_collections.py  test_config.py  test_db.py  test_feedback.py  test_init.py  test_managers.py  test_processor.py  test_query.py  test_utils.py
tests/general/: conftest.py  test_chunking.py  test_objects.py  test_save_load.py  (+4 more)
(+345 files in other folders)
